--- a/app/src/main/res/layout/fragment_a.xml
+++ b/app/src/main/res/layout/fragment_a.xml
@@ -11,7 +11,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:text="@string/hello_blank_fragment"
-        android:textColor="#ff0"
+        android:textColor="#7F7F7F"
+        android:gravity="center"
         android:textSize="40sp"/>
 
 </FrameLayout>
