--- a/app/src/main/res/layout/fragment_ba.xml
+++ b/app/src/main/res/layout/fragment_ba.xml
@@ -13,6 +13,7 @@
     android:layout_height="wrap_content"
     android:text="logout"
     android:id="@+id/btnLogout"
+    android:onClick="goToLogin"
     />
 
 
