--- a/app/src/main/res/layout/fragment_ba.xml
+++ b/app/src/main/res/layout/fragment_ba.xml
@@ -62,6 +62,7 @@
         android:layout_height="wrap_content"
         android:text="Edit Profile"
         android:layout_marginTop="10dp"
+        android:onClick="goToEdit"
         />
 <Button
     android:layout_width="wrap_content"
