--- a/app/src/main/res/layout/fragment_bb.xml
+++ b/app/src/main/res/layout/fragment_bb.xml
@@ -56,6 +56,7 @@
         android:layout_height="wrap_content"
         android:text="Save"
         android:layout_marginTop="10dp"
+        android:onClick="goToProfile"
         />
     
     <TextView
