--- a/app/src/main/res/layout/fragment_ba.xml
+++ b/app/src/main/res/layout/fragment_ba.xml
@@ -24,6 +24,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:id="@+id/name"
         android:text="Name Here"
         android:textSize="20sp"
         android:textAlignment="center"
@@ -43,6 +44,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="USN Here"
+        android:id="@+id/sUsn"
         android:textSize="20sp"
         android:textAlignment="center"
         android:layout_marginTop="10dp"
