--- a/app/src/main/res/layout/header_layout.xml
+++ b/app/src/main/res/layout/header_layout.xml
@@ -26,10 +26,9 @@
         android:textStyle="bold"/>
 
     <TextView
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/sUsn"
-        android:text="Hello"
         android:textSize="18sp"
         android:textStyle="bold"/>
 </LinearLayout>
