--- a/app/src/main/res/layout/fragment_ba.xml
+++ b/app/src/main/res/layout/fragment_ba.xml
@@ -35,6 +35,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Email Here"
+        android:id="@+id/email"
         android:textSize="20sp"
         android:textAlignment="center"
         android:layout_marginTop="10dp"
@@ -54,6 +55,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Phone Here"
+        android:id="@+id/phone"
         android:textSize="20sp"
         android:textAlignment="center"
         android:layout_marginTop="10dp"
