--- a/app/src/main/res/layout/fragment_bb.xml
+++ b/app/src/main/res/layout/fragment_bb.xml
@@ -17,6 +17,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Name Here"
+        android:id="@+id/name"
         android:textSize="20sp"
         android:textAlignment="center"
         android:layout_marginTop="10dp"
@@ -26,6 +27,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="USN Here"
+        android:id="@+id/sUsn"
         android:textSize="20sp"
         android:textAlignment="center"
         android:layout_marginTop="10dp"
@@ -35,7 +37,8 @@
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Email"
+        android:hint="Email"
+        android:id="@+id/email"
         android:inputType="textEmailAddress"
         android:textSize="15sp"
         android:layout_marginTop="10dp"
@@ -45,7 +48,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="number"
-        android:text="Phone Number"
+        android:hint="Phone Number"
+        android:id="@+id/phone"
         android:textSize="15sp"
         android:layout_marginTop="10dp"
         />
