--- a/app/src/main/res/layout/fragment_bc.xml
+++ b/app/src/main/res/layout/fragment_bc.xml
@@ -15,6 +15,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Name Here"
+        android:id="@+id/name"
         android:textSize="20sp"
         android:textAlignment="center"
         android:layout_marginTop="10dp"
@@ -25,6 +26,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="USN Here"
+        android:id="@+id/sUsn"
         android:textSize="20sp"
         android:textAlignment="center"
         android:layout_marginTop="10dp"
