--- a/app/src/main/res/layout/fragment_bc.xml
+++ b/app/src/main/res/layout/fragment_bc.xml
@@ -59,8 +59,8 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:id="@+id/btnChange"
         android:text="Change"
-        android:onClick="goToEdit"
         />
 
 </LinearLayout>
