--- a/app/src/main/res/layout/activity_reg_success.xml
+++ b/app/src/main/res/layout/activity_reg_success.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:gravity="center"
     android:orientation="vertical"
-    tools:context=".RegSucess">
+    tools:context=".RegSuccess">
 
     <TextView
         android:layout_width="match_parent"
