--- a/app/src/main/res/layout/fragment_bb.xml
+++ b/app/src/main/res/layout/fragment_bb.xml
@@ -59,8 +59,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Save"
+        android:id="@+id/btnSave"
         android:layout_marginTop="10dp"
-        android:onClick="goToProfile"
         />
     
     <TextView
