--- a/app/src/main/res/layout/activity_reg_success.xml
+++ b/app/src/main/res/layout/activity_reg_success.xml
@@ -32,16 +32,18 @@
             android:text="@string/successOne"
             android:textSize="18sp"
             />
+
         <TextView
+            android:id="@+id/successTwo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/successTwo"
-            android:inputType="textLongMessage"
             android:layout_marginLeft="10dp"
-            android:text="@string/successTwo"
-            android:textSize="18sp"
             android:layout_toRightOf="@+id/successOne"
-            />
+            android:inputType="textLongMessage"
+
+            android:text="@string/successTwo"
+            android:textColor="#3F51B5"
+            android:textSize="18sp" />
 
         <TextView
             android:layout_width="wrap_content"
