--- a/app/src/main/res/layout/activity_signin.xml
+++ b/app/src/main/res/layout/activity_signin.xml
@@ -58,15 +58,16 @@
             android:text="@string/flashOne"
             android:textSize="18sp"
             />
+
         <TextView
+            android:id="@+id/flashTwo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/flashTwo"
-            android:inputType="textLongMessage"
             android:layout_marginLeft="10dp"
-            android:text="@string/flashTwo"
-            android:textSize="18sp"
             android:layout_toRightOf="@+id/flashOne"
-            />
+            android:inputType="textLongMessage"
+            android:text="@string/flashTwo"
+            android:textColor="#3F51B5"
+            android:textSize="18sp" />
     </RelativeLayout>
 </androidx.appcompat.widget.LinearLayoutCompat>
