--- a/app/src/main/res/layout/fragment_ba.xml
+++ b/app/src/main/res/layout/fragment_ba.xml
@@ -4,19 +4,41 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:gravity="center_horizontal"
     android:orientation="vertical"
     tools:context=".BaFragment"
+    android:padding="10dp"
+    android:layout_margin="10dp"
     >
 
     <!-- TODO: Update blank fragment layout -->
 
+
+ <androidx.cardview.widget.CardView
+     android:layout_width="match_parent"
+     android:layout_height="wrap_content"
+     android:elevation="8dp"
+    app:cardCornerRadius="5dp"
+     app:cardUseCompatPadding="true"
+
+
+     >
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+       android:gravity="left"
+        android:paddingLeft="20dp"
+        android:paddingBottom="10dp"
+
+        >
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="STUDENT Profile"
         android:textSize="20sp"
-        android:textAlignment="center"
+
         android:textStyle="bold"
         android:layout_marginTop="30dp"
         />
@@ -27,7 +49,7 @@
         android:id="@+id/name"
         android:text="Name Here"
         android:textSize="20sp"
-        android:textAlignment="center"
+
         android:layout_marginTop="10dp"
         />
 
@@ -37,7 +59,7 @@
         android:text="Email Here"
         android:id="@+id/email"
         android:textSize="20sp"
-        android:textAlignment="center"
+
         android:layout_marginTop="10dp"
         />
 
@@ -47,7 +69,7 @@
         android:text="USN Here"
         android:id="@+id/sUsn"
         android:textSize="20sp"
-        android:textAlignment="center"
+
         android:layout_marginTop="10dp"
         />
 
@@ -57,7 +79,7 @@
         android:text="Phone Here"
         android:id="@+id/phone"
         android:textSize="20sp"
-        android:textAlignment="center"
+
         android:layout_marginTop="10dp"
         />
 
@@ -67,6 +89,7 @@
         android:text="Edit Profile"
         android:id="@+id/btnChange"
         android:layout_marginTop="10dp"
+
         />
 <Button
     android:layout_width="wrap_content"
@@ -76,7 +99,8 @@
     android:onClick="goToLogin"
     android:layout_marginTop="10dp"
     />
-
+    </LinearLayout>
+ </androidx.cardview.widget.CardView>
 
 
 
