--- a/app/src/main/res/layout/fragment_ba.xml
+++ b/app/src/main/res/layout/fragment_ba.xml
@@ -8,19 +8,27 @@
     android:gravity="center_horizontal"
     android:orientation="vertical"
     tools:context=".BaFragment"
-    android:padding="10dp"
-    android:layout_margin="10dp"
     >
 
     <!-- TODO: Update blank fragment layout -->
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="STUDENT PROFILE"
+        android:textSize="30sp"
+        android:textAlignment="center"
+        android:textStyle="bold"
+        android:layout_marginTop="30dp"
+        />
 
  <androidx.cardview.widget.CardView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
-     android:elevation="8dp"
-    app:cardCornerRadius="5dp"
+     android:elevation="10dp"
+    app:cardCornerRadius="8dp"
      app:cardUseCompatPadding="true"
+   android:layout_margin="10dp"
 
 
      >
@@ -33,15 +41,6 @@
         android:paddingBottom="10dp"
 
         >
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="STUDENT Profile"
-        android:textSize="20sp"
-
-        android:textStyle="bold"
-        android:layout_marginTop="30dp"
-        />
 
     <TextView
         android:layout_width="match_parent"
