--- a/app/src/main/res/layout/fragment_bb.xml
+++ b/app/src/main/res/layout/fragment_bb.xml
@@ -25,26 +25,26 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:gravity="center_horizontal"
+            android:gravity="center_vertical"
             >
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Name Here"
-        android:id="@+id/name"
-        android:textSize="20sp"
-        android:textAlignment="center"
-        android:layout_marginTop="10dp"
-        />
+
+            <TextView
+                android:id="@+id/name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="8dp"
+                android:text="Name Here"
+                android:textAlignment="center"
+                android:textSize="20sp" />
 
     <TextView
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="USN Here"
         android:id="@+id/sUsn"
         android:textSize="20sp"
+        android:padding="8dp"
         android:textAlignment="center"
-        android:layout_marginTop="10dp"
 
         />
 
