--- a/app/src/main/res/layout/fragment_c_new.xml
+++ b/app/src/main/res/layout/fragment_c_new.xml
@@ -1,15 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".CFragmentNew">
+    tools:context=".CFragmentNew"
+    android:orientation="horizontal">
 
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/recyclerFaculty"/>
 
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/btnAddFaculty"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:tint="#fff"
+        android:layout_alignParentBottom="true"
+        android:clickable="true"
+        android:src="@drawable/baseline_add_24"
+        android:layout_margin="21dp"/>
 
-</LinearLayout>
+
+</RelativeLayout>
