--- a/app/src/main/res/layout/cgpa_row.xml
+++ b/app/src/main/res/layout/cgpa_row.xml
@@ -54,7 +54,7 @@
             android:background="@android:drawable/btn_dropdown"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="8dp"
-            android:id="@+id/spinneSchemee"/>
+            android:id="@+id/spinneScheme"/>
     </RelativeLayout>
 
     <EditText
